# aws-mcp

./: .gitignore  CHANGELOG.md  LICENSE  README.md  debug_test.py  list_secrets.py  test_direct.py  test_fix.py
awslabs/: __init__.py
awslabs/aws_secrets_manager_mcp_server/: models.py  server.py
src/: mcp-config-example.json  pyproject.toml  test_mcp_server.py
src/aws-secrets-manager-mcp-server/: NOTICE  PROJECT_SUMMARY.md  README.md  SETUP_GUIDE.md  demo_test.py  simple_demo.py
src/aws-secrets-manager-mcp-server/awslabs/aws_secrets_manager_mcp_server/: __init__.py  consts.py  server.py
src/aws-secrets-manager-mcp-server/tests/: __init__.py  test_models.py
src/elastic-beanstalk-mcp-server/: Dockerfile  README.md  pyproject.toml
src/elastic-beanstalk-mcp-server/awslabs/elastic_beanstalk_mcp_server/: __init__.py  main.py
src/elastic-beanstalk-mcp-server/docs/: index.md
src/elastic-beanstalk-mcp-server/samples/: create_environment.py  list_applications.py
src/elastic-beanstalk-mcp-server/tests/: test_server.py
